# CF-Notif-CPP

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  TODO.md  build.ps1  clean.ps1  friends.txt  test.cpp
.github/workflows/: ci-test.yml  ci.yml
src/: config.h  main.cpp  popup.cpp  popup.h  readCsv.cpp  readCsv.h
